# dynpdt_expansion

./: CMakeLists.txt  README.md
include/: poplar.hpp
include/all_key_restore/: CMakeLists.txt  map_akr.hpp  plain_bonsai_nlm_akr.hpp  plain_bonsai_trie_akr.hpp  test_all_key_restore.cpp
include/check/: CMakeLists.txt  CP_info.hpp  map_check.hpp  memo.txt  plain_bonsai_nlm_check.hpp  plain_bonsai_tire_check.hpp
include/dynamic_replacement/: CMakeLists.txt  README.md  map_dr.hpp  plain_bonsa_trie_dr.hpp  plain_bonsai_nlm_dr.hpp  test_CPD_order_not_recursion.cpp  test_compute_node_connect_and_blanch_num.cpp  test_require_centroid_path_order_and_insert_dictionary.cpp  test_require_centroid_path_order_and_insert_dictionary_using_backward_cumulative.cpp  test_restore_string.cpp
include/poplar/: map.hpp  plain_bonsai_nlm.hpp  plain_bonsai_trie.hpp
include/skip_dummy/: map_SD.hpp  plain_bonsai_nlm_SD.hpp  plain_bonsai_trie_SD.hpp
include/subtree_node_replacement/: map_SNR.hpp  plain_bonsai_nlm_SNR.hpp  plain_bonsai_trie_SNR.hpp
include/table/: map_table.hpp  plain_bonsai_nlm_table.hpp  plain_bonsai_trie_table.hpp
sample/: sample.cpp
