set(CMAKE_CXX_STANDARD 17)

enable_testing()

add_executable(test_compute_node_connect_and_blanch_num test_compute_node_connect_and_blanch_num.cpp)
add_test(test_compute_node_connect_and_blanch_num test_compute_node_connect_and_blanch_num)

add_executable(test_require_centroid_path_order_and_insert_dictionary test_require_centroid_path_order_and_insert_dictionary.cpp)
add_test(test_require_centroid_path_order_and_insert_dictionary test_require_centroid_path_order_and_insert_dictionary)

add_executable(test_require_centroid_path_order_and_insert_dictionary_using_backward_cumulative test_require_centroid_path_order_and_insert_dictionary_using_backward_cumulative.cpp)
add_test(test_require_centroid_path_order_and_insert_dictionary_using_backward_cumulative test_require_centroid_path_order_and_insert_dictionary_using_backward_cumulative)

add_executable(test_restore_string test_restore_string.cpp)
add_test(test_restore_string test_restore_string)